[package]
name = "me-claimer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
bip39 = "2.1.0"
borsh = "1.5.1"
dialoguer = "0.11.0"
eyre = "0.6.12"
hex = "0.4.3"
indicatif = "0.17.8"
itertools = "0.13.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
ring = "0.17.8"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sodiumoxide = "0.2.7"
solana-client = "2.0.14"
solana-program = "2.0.14"
solana-sdk = "2.0.14"
solana-transaction-status = "2.0.14"
spl-token = "6.0.0"
term_size = "0.3.2"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"


[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
